--- a/mdb-help-text.html
+++ b/mdb-help-text.html
@@ -15,6 +15,7 @@ Help text element
     <style>
        :host {
         display: block;
+        position: relative;
       }
       
        :host #help {
