changed display to inline

--- a/mdb-help-text.html
+++ b/mdb-help-text.html
@@ -14,7 +14,7 @@ Help text element
   <template>
     <style>
        :host {
-        display: block;
+        display: inline;
         position: relative;
       }
       
