set font-weight

--- a/mdb-help-text.html
+++ b/mdb-help-text.html
@@ -38,6 +38,7 @@ Help text element
           position: relative;
           background: #fff;
           border: 1px solid #bfbfbf;
+          font-weight: 400;
         }
       }
       
